--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "build:jsoo": "npm run build:jsoo:web && npm run build:jsoo:node",
     "build:jsoo:web": "./scripts/build/jsoo/build-web.sh",
     "build:jsoo:node": "./scripts/build/jsoo/build-node.sh",
-    "build:native:node": "./scripts/build/native/build-node.sh",
+    "build:native": "./scripts/build/native/build.sh",
     "build:docs": "typedoc",
     "prepublish:web": "./scripts/prepublish/prepublish-web.sh",
     "prepublish:node": "./scripts/prepublish/prepublish-node.sh",
@@ -94,12 +94,13 @@
     "e2e:show-report": "npx playwright show-report tests/report",
     "update-changelog": "./scripts/changelog/update-changelog.sh",
     "prepare": "husky",
-    "publish": "./scripts/publish/publish.sh",
-    "publish:native": "./scripts/publish/publish-native.sh"
+    "native:prepublish": "./scripts/prepublish/native/prepublish-native-package.sh",
+    "native:publish": "./scripts/publish/native/publish-native-package.sh"
   },
   "author": "O(1) Labs",
   "devDependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "@napi-rs/cli": "^3.4.1",
     "@noble/curves": "1.8.1",
     "@noble/hashes": "^1.3.2",
     "@playwright/test": "^1.48.0",
@@ -144,5 +145,8 @@
     "@o1js/native-darwin-x64": "file:./native/darwin-x64",
     "@o1js/native-linux-arm64": "file:./native/linux-arm64",
     "@o1js/native-win32-x64": "file:./native/win32-x64"
+  },
+  "o1js-internal": {
+    "native-version": "0.0.1-dev.3"
   }
 }
