--- a/src/bindings/ocaml/jsoo_exports/dune
+++ b/src/bindings/ocaml/jsoo_exports/dune
@@ -6,58 +6,58 @@
 (rule
  (enabled_if
   (= %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n} n))
- (targets node_js_plonk_wasm.js node_js_plonk_wasm_bg.wasm)
+ (targets node_js_kimchi_wasm.js node_js_kimchi_wasm_bg.wasm)
  (deps
-  (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/plonk_wasm.js)
+  (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/kimchi_wasm.js)
   (:d2
-   ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/plonk_wasm_bg.wasm))
+   ../../../mina/src/lib/crypto/kimchi_bindings/js/node_js/kimchi_wasm_bg.wasm))
  (action
   (progn
-   (run cp %{d1} node_js_plonk_wasm.js)
-   (run cp %{d2} node_js_plonk_wasm_bg.wasm))))
+   (run cp %{d1} node_js_kimchi_wasm.js)
+   (run cp %{d2} node_js_kimchi_wasm_bg.wasm))))
 
 (rule
  (enabled_if
   (= %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n} n))
- (targets web_plonk_wasm.js web_plonk_wasm_bg.wasm)
+ (targets web_kimchi_wasm.js web_kimchi_wasm_bg.wasm)
  (deps
-  (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/web/plonk_wasm.js)
+  (:d1 ../../../mina/src/lib/crypto/kimchi_bindings/js/web/kimchi_wasm.js)
   (:d2
-   ../../../mina/src/lib/crypto/kimchi_bindings/js/web/plonk_wasm_bg.wasm))
+   ../../../mina/src/lib/crypto/kimchi_bindings/js/web/kimchi_wasm_bg.wasm))
  (action
   (progn
-   (run cp %{d1} web_plonk_wasm.js)
-   (run cp %{d2} web_plonk_wasm_bg.wasm))))
+   (run cp %{d1} web_kimchi_wasm.js)
+   (run cp %{d2} web_kimchi_wasm_bg.wasm))))
 
 (rule
  (enabled_if
   (<> %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n} n))
- (targets node_js_plonk_wasm.js node_js_plonk_wasm_bg.wasm)
+ (targets node_js_kimchi_wasm.js node_js_kimchi_wasm_bg.wasm)
  (action
   (progn
    (run
     cp
-    %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/plonk_wasm.js
-    node_js_plonk_wasm.js)
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/kimchi_wasm.js
+    node_js_kimchi_wasm.js)
    (run
     cp
-    %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/plonk_wasm_bg.wasm
-    node_js_plonk_wasm_bg.wasm))))
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_NODE_JS=n}/kimchi_wasm_bg.wasm
+    node_js_kimchi_wasm_bg.wasm))))
 
 (rule
  (enabled_if
   (<> %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n} n))
- (targets web_plonk_wasm.js web_plonk_wasm_bg.wasm)
+ (targets web_kimchi_wasm.js web_kimchi_wasm_bg.wasm)
  (action
   (progn
    (run
     cp
-    %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/plonk_wasm.js
-    web_plonk_wasm.js)
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/kimchi_wasm.js
+    web_kimchi_wasm.js)
    (run
     cp
-    %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/plonk_wasm_bg.wasm
-    web_plonk_wasm_bg.wasm))))
+    %{env:PREBUILT_KIMCHI_BINDINGS_JS_WEB=n}/kimchi_wasm_bg.wasm
+    web_kimchi_wasm_bg.wasm))))
 
 (executable
  (name o1js_node)
@@ -74,7 +74,7 @@
   o1js_bindings.lib
   bindings_js.node_backend
   bindings_js.native_backend)
- (link_deps node_js_plonk_wasm.js node_js_plonk_wasm_bg.wasm)
+ (link_deps node_js_kimchi_wasm.js node_js_kimchi_wasm_bg.wasm)
  (instrumentation
   (backend bisect_ppx))
  (forbidden_libraries async core re2 ctypes)
@@ -90,7 +90,7 @@
   (flags +toplevel.js +dynlink.js --pretty)
   (javascript_files overrides.js))
  (libraries o1js_bindings.lib bindings_js.web_backend)
- (link_deps web_plonk_wasm.js web_plonk_wasm_bg.wasm)
+ (link_deps web_kimchi_wasm.js web_kimchi_wasm_bg.wasm)
  (instrumentation
   (backend bisect_ppx))
  (forbidden_libraries async core re2 ctypes)
